--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,6 @@
 			</div>
 			<div class="navbar-collapse">
 				<ul class="nav navbar-nav pull-left">
-					<li><a href="/download.html">Download</a></li>
 					<li><a href="/forum/forum-11.html">News</a></li>
 					<li><a href="/forum/">Forum</a></li>
 					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
@@ -139,6 +138,15 @@
 							<span class="glyphicon glyphicon-chevron-right"></span>
 						</a>
 				</div>
+				<br><br>
+				<div class="text-center">
+					<a href="https://playnite.link/download/PlayniteInstaller.exe" type="button" class="btn btn-success " style="width:300px">
+						<i class="glyphicon glyphicon-download-alt"></i>Download
+					</a>
+					<br><br>
+					Windows 7 and newer supported
+					<a href="https://playnite.link/forum/forum-11.html">Changelog</a>					
+				</div>
 				<br>
 				<div class="row">
 					<div class="col-md-4">
@@ -166,7 +174,7 @@
 						<h3 class="text-info">
 							Extensions
 						</h3>
-						<p>Playnite can be <a href="https://playnite.link/docs/">extended</a> with plugins (written in .NET languages) or by scripts (PowerShell and IronPython are currently supported).</p>
+						<p>Playnite can be <a href="https://playnite.link/docs/">extended</a> with plugins (written in .NET languages) or PowerShell scripts.</p>
 					</div>
 					<div class="col-md-4">
 						<h3 class="text-info">
