--- a/source/index.html
+++ b/source/index.html
@@ -75,6 +75,7 @@
 				<ul class="nav navbar-nav pull-left">
 					<li><a href="/forum/forum-11.html">News</a></li>
 					<li><a href="/forum/">Forum</a></li>
+					<li><a href="/addons.html">Add-ons</a></li>
 					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
 					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
 					<li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
