--- a/source/addons.html
+++ b/source/addons.html
@@ -31,31 +31,49 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-bottom navbar-inverse fixed-bottom mb-0">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
-            </div>
-            <div class="navbar-collapse">
-                <ul class="nav navbar-nav pull-left">
-                    <li><a href="/forum/forum-11.html">News</a></li>
-                    <li><a href="/forum/">Forum</a></li>
-                    <li><a href="/addons.html">Add-ons</a></li>
-                    <li><a href="https://discord.gg/BrtABqe">Discord</a></li>
-                    <li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
-                    <li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
-                    <li><a href="https://playnite.link/docs/">SDK</a></li>
-                </ul>
-                <div class="navbar-nav search-box-container">
-                    <input type="text" class="form-control" id="searchBox" placeholder="Search add-ons">
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <div class='spacer'></div>
+	<nav class="navbar navbar-inverse">
+		<div class="container">
+			<div class="navbar-header">	
+				<a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
+			</div>
+			<div class="navbar-collapse">
+				<ul class="nav navbar-nav pull-left">
+					<li><a href="/forum/forum-11.html">News</a></li>
+					<li><a href="/forum/">Forum</a></li>
+					<li><a href="/addons.html">Add-ons</a></li>
+					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
+					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
+					<li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
+					<li><a href="https://playnite.link/docs/">SDK</a></li>
+				</ul>
+				<span class="navbar-links">
+					<a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px"/></a>
+					<a href="https://twitter.com/AppPlaynite"><img src="twitter.png" height="24" style="margin-right:20px"/></a>
+					<a href="https://discord.gg/BrtABqe"><img src="discord.png" height="24" style="margin-right:20px" /></a>
+					<a href="https://www.patreon.com/playnite"><img src="patreon.png" height="24" style="margin-right:20px" /></a>
+				</span>
+			</div>					
+		</div>
+	</nav>	
 
     <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <p>Add-ons are a way to extend Playnite's functionality. Add-ons can provide integration with various game libraries, metadata source and extend other generic features. Playnite look in both Desktop and Fullscreen modes can be also changed using add-ons.</p>
+                <p>Add-ons can be installed using 'Download' buttons on the list below (if you have Playnite already installed) or in the Add-ons menu inside Playnite.</p>
+                <p>You can learn more on how to create and publish add-ons in the <a href="https://playnite.link/docs/">Docs.</a></p>
+            </div>
+        </div>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Warning!</strong> Installing 3rd party add-ons may result in performance and usability issues.
+        </div>
+        
+        <div class="input-group searchBoxContainer">
+            <span class="input-group-addon" id="searchBoxLabel">Search add-ons</span>
+            <input type="text" class="form-control" id="searchBox" placeholder="Type to search" aria-describedby="searchBoxLabel">
+        </div>
+
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsGameLibraryHeader">
