--- a/source/addons.html
+++ b/source/addons.html
@@ -11,11 +11,9 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Playnite - video game library manager" />
-    <meta property="og:description"
-        content="Video game library manager with one simple goal: To provide a unified interface for all of your games." />
+    <meta property="og:description" content="Video game library manager with one simple goal: To provide a unified interface for all of your games." />
     <meta property="og:image" content="https://playnite.link/social_image.jpg" />
-    <meta name="description"
-        content="Video game library manager with one simple goal: To provide a unified interface for all of your games.">
+    <meta name="description" content="Video game library manager with one simple goal: To provide a unified interface for all of your games.">
     <meta name="author" content="Playnite">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,44 +29,45 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
-		<div class="container">
-			<div class="navbar-header">	
-				<a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
-			</div>
-			<div class="navbar-collapse">
-				<ul class="nav navbar-nav pull-left">
-					<li><a href="/forum/forum-11.html">News</a></li>
-					<li><a href="/forum/">Forum</a></li>
-					<li><a href="/addons.html">Add-ons</a></li>
-					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
-					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
-					<li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
-					<li><a href="https://playnite.link/docs/">SDK</a></li>
-				</ul>
-				<span class="navbar-links">
-					<a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px"/></a>
-					<a href="https://twitter.com/AppPlaynite"><img src="twitter.png" height="24" style="margin-right:20px"/></a>
-					<a href="https://discord.gg/BrtABqe"><img src="discord.png" height="24" style="margin-right:20px" /></a>
-					<a href="https://www.patreon.com/playnite"><img src="patreon.png" height="24" style="margin-right:20px" /></a>
-				</span>
-			</div>					
-		</div>
-	</nav>	
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
+            </div>
+            <div class="navbar-collapse">
+                <ul class="nav navbar-nav pull-left">
+                    <li><a href="/forum/forum-11.html">News</a></li>
+                    <li><a href="/forum/">Forum</a></li>
+                    <li><a href="/addons.html">Add-ons</a></li>
+                    <li><a href="https://discord.gg/BrtABqe">Discord</a></li>
+                    <li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
+                    <li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
+                    <li><a href="https://playnite.link/docs/">SDK</a></li>
+                </ul>
+                <span class="navbar-links">
+                    <a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px" /></a>
+                    <a href="https://twitter.com/AppPlaynite"><img src="twitter.png" height="24" style="margin-right:20px" /></a>
+                    <a href="https://discord.gg/BrtABqe"><img src="discord.png" height="24" style="margin-right:20px" /></a>
+                    <a href="https://www.patreon.com/playnite"><img src="patreon.png" height="24" style="margin-right:20px" /></a>
+                </span>
+            </div>
+        </div>
+    </nav>
 
     <div class="container">
         <div class="panel panel-default">
             <div class="panel-body">
-                <p>Add-ons are a way to extend Playnite's functionality. Add-ons can provide integration with various game libraries, metadata source and extend other generic features. Playnite look in both Desktop and Fullscreen modes can be also changed using add-ons.</p>
+                <p>Add-ons are a way to extend Playnite's functionality. Add-ons can provide integration with various game libraries, metadata source and extend other generic features. Playnite look
+                    in both Desktop and Fullscreen modes can be also changed using add-ons.</p>
                 <p>Add-ons can be installed using 'Download' buttons on the list below (if you have Playnite already installed) or in the Add-ons menu inside Playnite.</p>
                 <p>You can learn more on how to create and publish add-ons in the <a href="https://playnite.link/docs/">Docs.</a></p>
             </div>
         </div>
         <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>Warning!</strong> Installing 3rd party add-ons may result in performance and usability issues.
+            <strong>Warning!</strong> Installing 3rd party add-ons may result in performance and usability issues, depending on add-ons used.
         </div>
-        
+
         <div class="input-group searchBoxContainer">
             <span class="input-group-addon" id="searchBoxLabel">Search add-ons</span>
             <input type="text" class="form-control" id="searchBox" placeholder="Type to search" aria-describedby="searchBoxLabel">
@@ -78,14 +77,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsGameLibraryHeader">
                     <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
-                            aria-expanded="true" aria-controls="collapseOne">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Libraries
                         </a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
-                    aria-labelledby="addonsGameLibraryHeader">
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="addonsGameLibraryHeader">
                     <div class="panel-body" id="addonsGameLibrary">
                         Loading...
                     </div>
@@ -94,14 +91,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsMetadataProviderHeader">
                     <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
-                            aria-expanded="false" aria-controls="collapseTwo">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             Metadata Sources
                         </a>
                     </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
-                    aria-labelledby="addonsMetadataProviderHeader">
+                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="addonsMetadataProviderHeader">
                     <div class="panel-body" id="addonsMetadataProvider">
                         Loading...
                     </div>
@@ -110,14 +105,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsGenericHeader">
                     <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"
-                            aria-expanded="false" aria-controls="collapseThree">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Generic
                         </a>
                     </h4>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
-                    aria-labelledby="addonsGenericHeader">
+                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="addonsGenericHeader">
                     <div class="panel-body" id="addonsGeneric">
                         Loading...
                     </div>
@@ -126,14 +119,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsThemeDesktopHeader">
                     <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour"
-                            aria-expanded="false" aria-controls="collapseFour">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             Themes Desktop
                         </a>
                     </h4>
                 </div>
-                <div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
-                    aria-labelledby="addonsThemeDesktopHeader">
+                <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="addonsThemeDesktopHeader">
                     <div class="panel-body" id="addonsThemeDesktop">
                         Loading...
                     </div>
@@ -142,14 +133,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="addonsThemeFullscreenHeader">
                     <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
-                            aria-expanded="false" aria-controls="collapseFive">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                             Themes Fullscreen
                         </a>
                     </h4>
                 </div>
-                <div id="collapseFive" class="panel-collapse collapse" role="tabpanel"
-                    aria-labelledby="addonsThemeFullscreenHeader">
+                <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="addonsThemeFullscreenHeader">
                     <div class="panel-body" id="addonsThemeFullscreen">
                         Loading...
                     </div>
