Makes info panel closable

--- a/source/addons.html
+++ b/source/addons.html
@@ -55,13 +55,12 @@
     </nav>
 
     <div class="container">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <p>Add-ons are a way to extend Playnite's functionality. Add-ons can provide integration with various game libraries, metadata source and extend other generic features. Playnite look
-                    in both Desktop and Fullscreen modes can be also changed using add-ons.</p>
-                <p>Add-ons can be installed using 'Download' buttons on the list below (if you have Playnite already installed) or in the Add-ons menu inside Playnite.</p>
-                <p>You can learn more on how to create and publish add-ons in the <a href="https://playnite.link/docs/">Docs.</a></p>
-            </div>
+        <div class="panel panel-default alert alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <p>Add-ons are a way to extend Playnite's functionality. Add-ons can provide integration with various game libraries, metadata source and extend other generic features. Playnite look
+                in both Desktop and Fullscreen modes can be also changed using add-ons.</p>
+            <p>Add-ons can be installed using 'Download' buttons on the list below (if you have Playnite already installed) or in the Add-ons menu inside Playnite.</p>
+            <p>You can learn more on how to create and publish add-ons in the <a href="https://playnite.link/docs/">Docs.</a></p>
         </div>
         <div class="alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
