--- a/source/index.html
+++ b/source/index.html
@@ -154,7 +154,7 @@
 						<h3 class="text-info">
 							Import popular libraries
 						</h3>
-						<p>Link games from Steam, Epic, Origin, GOG, Battle.net, Uplay, Twitch, Bethesda and itch.io, including games that are not installed! Microsoft Store (Xbox App) games are also supported. Click <a href="https://github.com/JosefNemec/Playnite/wiki/Feature-table-based-on-library-provider">here</a> for a full list of features supported from each service.</p>
+						<p>Link games from Steam, Epic, Origin, GOG, Battle.net, Ubisoft Connect and <a href="https://playnite.link/addons.html">other services</a>, including games that are not installed!
 					</div>
 					<div class="col-md-4">
 						<h3 class="text-info">
