--- a/source/index.html
+++ b/source/index.html
@@ -166,7 +166,7 @@
 						<h3 class="text-info">
 							Themes
 						</h3>
-						<p>Playnite's look can be <a href="https://playnite.link/forum/forum-3.html">fully customized</a>, from simple color changes to complete layout re-designs.</p>
+						<p>Playnite's look can be <a href="https://playnite.link/addons.html#themesDesktop">fully customized</a>, from simple color changes to complete layout re-designs.</p>
 					</div>
 				</div>
 
@@ -175,7 +175,7 @@
 						<h3 class="text-info">
 							Extensions
 						</h3>
-						<p>Playnite can be <a href="https://playnite.link/docs/">extended</a> with plugins (written in .NET languages) or PowerShell scripts.</p>
+						<p>Playnite's functionality can be <a href="https://playnite.link/addons.html">extended</a> with plugins and script extensions.</p>
 					</div>
 					<div class="col-md-4">
 						<h3 class="text-info">
