Updated changelog link

--- a/source/index.html
+++ b/source/index.html
@@ -145,7 +145,7 @@
 					</a>
 					<br><br>
 					Windows 7 and newer supported
-					<a href="https://playnite.link/forum/forum-11.html">Changelog</a>					
+					<a href="https://github.com/JosefNemec/Playnite/releases">Changelog</a>					
 				</div>
 				<br>
 				<div class="row">
