Point news links to twitter instead of forums

--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
 			</div>
 			<div class="navbar-collapse">
 				<ul class="nav navbar-nav pull-left">
-					<li><a href="/forum/forum-11.html">News</a></li>
+					<li><a href="https://twitter.com/AppPlaynite">News</a></li>
 					<li><a href="/addons.html">Add-ons</a></li>
 					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
 					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
