--- a/source/addons.html
+++ b/source/addons.html
@@ -41,7 +41,7 @@
                     <li><a href="https://discord.gg/BrtABqe">Discord</a></li>
                     <li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
                     <li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
-                    <li><a href="https://playnite.link/docs/main/">SDK</a></li>
+                    <li><a href="https://playnite.link/docs/">SDK</a></li>
                 </ul>
                 <span class="navbar-links">
                     <a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px" /></a>
