--- a/source/index.html
+++ b/source/index.html
@@ -75,8 +75,7 @@
 					<li><a href="/addons.html">Add-ons</a></li>
 					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
 					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
-					<li><a href="https://github.com/JosefNemec/Playnite/wiki">Wiki</a></li>
-					<li><a href="https://playnite.link/docs/">SDK</a></li>
+					<li><a href="https://api.playnite.link/docs/">Manual</a></li>
 				</ul>
 				<span class="navbar-links">
 					<a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px"/></a>
