--- a/source/addons.html
+++ b/source/addons.html
@@ -28,28 +28,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
-            </div>
-            <div class="navbar-collapse">
-                <ul class="nav navbar-nav pull-left">
-                    <li><a href="/forum/forum-11.html">News</a></li>
-                    <li><a href="/forum/">Forum</a></li>
-                    <li><a href="/addons.html">Add-ons</a></li>
-                    <li><a href="https://discord.gg/BrtABqe">Discord</a></li>
-                    <li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
+	<div class="navbar navbar-inverse">
+		<div class="container">
+			<div class="navbar-header">	
+				<a class="navbar-logo" href="/"><img src="applogo.png" height="48"></a>
+			</div>
+			<div class="navbar-collapse">
+				<ul class="nav navbar-nav pull-left">
+					<li><a href="/addons.html">Add-ons</a></li>
+					<li><a href="https://discord.gg/BrtABqe">Discord</a></li>
+					<li><a href="https://github.com/JosefNemec/Playnite/">GitHub</a></li>
 					<li><a href="https://api.playnite.link/docs/">Manual</a></li>
-                </ul>
-                <span class="navbar-links">
-                    <a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px" /></a>
-                    <a href="https://discord.gg/BrtABqe"><img src="discord.png" height="24" style="margin-right:20px" /></a>
-                    <a href="https://www.patreon.com/playnite"><img src="patreon.png" height="24" style="margin-right:20px" /></a>
-                </span>
-            </div>
-        </div>
-    </nav>
+				</ul>
+				<span class="navbar-links">
+					<a href="https://www.reddit.com/r/playnite/"><img src="reddit.png" height="24" style="margin-right:20px"/></a>
+					<a href="https://discord.gg/BrtABqe"><img src="discord.png" height="24" style="margin-right:20px" /></a>
+					<a href="https://www.patreon.com/playnite"><img src="patreon.png" height="24" style="margin-right:20px" /></a>
+				</span>
+			</div>					
+		</div>
+	</div>	
 
     <div class="container">
         <div id='info-alert' class="alert alert-info alert-dismissible" role="alert">
